--- a/AMMChat/Base.lproj/Main.storyboard
+++ b/AMMChat/Base.lproj/Main.storyboard
@@ -1,26 +1,112 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Z7S-nq-16f">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--MainVC-->
+        <scene sceneID="zZ6-NN-KM9">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="AjX-Pt-TcH" customClass="MainVC" customModule="AMMChat" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="n6R-VK-di1"/>
+                        <viewControllerLayoutGuide type="bottom" id="DjG-tS-pve"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="teh-bv-cSF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.7725490196" green="0.0" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="4pg-iF-fUK" appends="YES" id="Yzh-bI-Jze"/>
+                        </connections>
+                    </view>
+                    <navigationItem key="navigationItem" id="HEl-gA-QLR">
+                        <barButtonItem key="leftBarButtonItem" title="Menu" id="CXk-Wh-Bv5">
+                            <connections>
+                                <action selector="menuBtnTapped:" destination="AjX-Pt-TcH" id="x9E-Zd-S21"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="fwZ-rw-06A" kind="presentation" identifier="openMenu" id="4Fd-si-jBT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fjl-OE-tat" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <screenEdgePanGestureRecognizer minimumNumberOfTouches="1" id="4pg-iF-fUK">
+                    <rectEdge key="edges" left="YES"/>
+                    <connections>
+                        <action selector="edgePanGestureWithSender:" destination="AjX-Pt-TcH" id="7yj-wk-dHi"/>
+                    </connections>
+                </screenEdgePanGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="924" y="157"/>
+        </scene>
+        <!--MenuVC-->
+        <scene sceneID="SRK-Bt-19N">
+            <objects>
+                <viewController id="fwZ-rw-06A" customClass="MenuVC" customModule="AMMChat" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bQD-xr-hkS"/>
+                        <viewControllerLayoutGuide type="bottom" id="kah-cZ-gIL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Icg-9R-Jyf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M4g-er-RXG">
+                                <rect key="frame" x="300" y="20" width="75" height="647"/>
+                                <gestureRecognizers/>
+                                <state key="normal">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelBtnTapped:" destination="fwZ-rw-06A" eventType="touchUpInside" id="cDc-X8-LeW"/>
+                                    <outletCollection property="gestureRecognizers" destination="Vjg-e2-lWz" appends="YES" id="SNV-6p-qu1"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.14117647059999999" green="0.2666666667" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="M4g-er-RXG" secondAttribute="trailing" id="7LC-0x-RVT"/>
+                            <constraint firstItem="kah-cZ-gIL" firstAttribute="top" secondItem="M4g-er-RXG" secondAttribute="bottom" id="Oou-fn-j4G"/>
+                            <constraint firstItem="M4g-er-RXG" firstAttribute="width" secondItem="Icg-9R-Jyf" secondAttribute="width" multiplier="0.2" id="Qvp-Pl-sUm"/>
+                            <constraint firstItem="M4g-er-RXG" firstAttribute="top" secondItem="bQD-xr-hkS" secondAttribute="bottom" id="v3k-go-nrn"/>
+                        </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gi3-6j-cuK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="Vjg-e2-lWz">
+                    <connections>
+                        <action selector="handleGestureWithSender:" destination="fwZ-rw-06A" id="gd1-Gm-Nwm"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="1647" y="157"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="H2L-8r-b83">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Z7S-nq-16f" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="KWj-0i-moj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="AjX-Pt-TcH" kind="relationship" relationship="rootViewController" id="iSb-ue-hUb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3gx-VC-PbW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="192.80000000000001" y="156.97151424287858"/>
         </scene>
     </scenes>
 </document>
