--- a/AMMChat/Base.lproj/Main.storyboard
+++ b/AMMChat/Base.lproj/Main.storyboard
@@ -163,11 +163,11 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="250" id="pGY-O5-ap3" customClass="NewsItemCell" customModule="AMMChat" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="250" id="pGY-O5-ap3" customClass="NewsItemCell" customModule="AMMChat" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="30" width="320" height="250"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pGY-O5-ap3" id="MV1-bA-FdL">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="250"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="249.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Заголовок новости Заголовок новости Заголовок новости " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="WwZ-ro-ayu">
@@ -179,7 +179,7 @@
                                                     <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mark.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Q1w-wu-gGN">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Q1w-wu-gGN">
                                                     <rect key="frame" x="8" y="56" width="304" height="152"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="152" id="xsl-N1-KFT"/>
@@ -256,6 +256,7 @@
                     <connections>
                         <outlet property="tableView" destination="F0I-Kf-c26" id="LII-rY-csb"/>
                         <segue destination="fwZ-rw-06A" kind="presentation" identifier="openMenu" id="bnC-Xo-Jse"/>
+                        <segue destination="XxD-Ai-rzK" kind="show" id="TJN-cz-s4N"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hR4-3b-rAM" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -267,6 +268,53 @@
                 </screenEdgePanGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1644.375" y="-559.85915492957747"/>
+        </scene>
+        <!--News DetailVC-->
+        <scene sceneID="h35-cM-REr">
+            <objects>
+                <viewController storyboardIdentifier="NewsDetailVC" id="XxD-Ai-rzK" customClass="NewsDetailVC" customModule="AMMChat" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="u0t-Ds-xiK"/>
+                        <viewControllerLayoutGuide type="bottom" id="R75-Bd-PAj"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="3Nx-Rt-vgr">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="dffgdfg " textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="n6H-rh-h54">
+                                <rect key="frame" x="0.0" y="264" width="320" height="304"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" red="0.13332152366638184" green="0.13334211707115173" blue="0.13331222534179688" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mark.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Flu-rG-95O">
+                                <rect key="frame" x="0.0" y="64" width="320" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="wwK-bT-fIe"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="n6H-rh-h54" firstAttribute="leading" secondItem="3Nx-Rt-vgr" secondAttribute="leading" id="1dp-pv-lmq"/>
+                            <constraint firstAttribute="bottom" secondItem="n6H-rh-h54" secondAttribute="bottom" id="70w-47-3Qe"/>
+                            <constraint firstItem="Flu-rG-95O" firstAttribute="top" secondItem="u0t-Ds-xiK" secondAttribute="bottom" id="Gca-xn-3vr"/>
+                            <constraint firstItem="Flu-rG-95O" firstAttribute="leading" secondItem="3Nx-Rt-vgr" secondAttribute="leading" id="Gy2-0h-GNl"/>
+                            <constraint firstItem="n6H-rh-h54" firstAttribute="top" secondItem="Flu-rG-95O" secondAttribute="bottom" id="mwG-jZ-8SI"/>
+                            <constraint firstAttribute="trailing" secondItem="Flu-rG-95O" secondAttribute="trailing" id="oKD-c4-YRR"/>
+                            <constraint firstAttribute="trailing" secondItem="n6H-rh-h54" secondAttribute="trailing" id="rW6-B0-Lsv"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="newsImage" destination="Flu-rG-95O" id="ogx-Jh-Ida"/>
+                        <outlet property="newsText" destination="n6H-rh-h54" id="4gv-hh-bdP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BUN-Xh-Vyg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2540.625" y="-935.91549295774644"/>
         </scene>
         <!--MenuVC-->
         <scene sceneID="SRK-Bt-19N">
@@ -294,8 +342,9 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="52t-Tb-alw">
                                 <rect key="frame" x="0.0" y="20" width="256" height="70"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mark.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="AA2-jo-Vfa">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emptyAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="AA2-jo-Vfa">
                                         <rect key="frame" x="8" y="7" width="55" height="55"/>
+                                        <color key="backgroundColor" red="0.97275298833847046" green="0.99205273389816284" blue="0.97973674535751343" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="55" id="HKF-QM-u9Z"/>
                                             <constraint firstAttribute="width" constant="55" id="Zt9-Js-tNj"/>
@@ -701,6 +750,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="trG-oc-b0u">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="barTintColor" red="0.24313725489999999" green="0.56470588239999997" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -731,6 +781,6 @@
         <image name="profile" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="4Fd-si-jBT"/>
+        <segue reference="bnC-Xo-Jse"/>
     </inferredMetricsTieBreakers>
 </document>
