--- a/AMMChat/Base.lproj/Main.storyboard
+++ b/AMMChat/Base.lproj/Main.storyboard
@@ -67,18 +67,58 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uN5-DE-HDb">
                                 <rect key="frame" x="0.0" y="317" width="320" height="187"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <tableView key="tableFooterView" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="RhL-db-esw">
+                                <tableView key="tableFooterView" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="28" sectionFooterHeight="28" id="RhL-db-esw">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="129"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <prototypes>
-                                        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="K1I-yJ-iD9">
-                                            <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="friendlistCell" rowHeight="70" id="K1I-yJ-iD9" customClass="friendListCell" customModule="AMMChat" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="28" width="320" height="70"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="K1I-yJ-iD9" id="Ycv-4Q-k0p">
-                                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
                                                 <autoresizingMask key="autoresizingMask"/>
+                                                <subviews>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DE5-OA-NzB">
+                                                        <rect key="frame" x="13" y="7.5" width="55" height="55"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="55" id="DsM-Xj-hi7"/>
+                                                            <constraint firstAttribute="height" constant="55" id="MV3-20-WjG"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Никита Псарев" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JRj-aN-dOy">
+                                                        <rect key="frame" x="76" y="7" width="204" height="30"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="30" id="B5V-Zx-0xN"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 курс 61 группа" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JSP-cb-uTX">
+                                                        <rect key="frame" x="76" y="37" width="196" height="19.5"/>
+                                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                                                        <color key="textColor" red="0.1333333333" green="0.1333333333" blue="0.1333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="JRj-aN-dOy" firstAttribute="leading" secondItem="DE5-OA-NzB" secondAttribute="trailing" constant="8" id="0EL-3p-NGd"/>
+                                                    <constraint firstItem="DE5-OA-NzB" firstAttribute="leading" secondItem="Ycv-4Q-k0p" secondAttribute="leadingMargin" constant="5" id="4EP-sv-EjT"/>
+                                                    <constraint firstItem="JSP-cb-uTX" firstAttribute="top" secondItem="JRj-aN-dOy" secondAttribute="bottom" id="4M1-Md-yJ0"/>
+                                                    <constraint firstItem="JRj-aN-dOy" firstAttribute="top" secondItem="Ycv-4Q-k0p" secondAttribute="top" constant="7" id="Bcs-qW-eY2"/>
+                                                    <constraint firstAttribute="trailing" secondItem="JRj-aN-dOy" secondAttribute="trailing" constant="40" id="OXL-gn-yoC"/>
+                                                    <constraint firstItem="JSP-cb-uTX" firstAttribute="leading" secondItem="DE5-OA-NzB" secondAttribute="trailing" constant="8" id="XXC-Lv-Ne3"/>
+                                                    <constraint firstItem="DE5-OA-NzB" firstAttribute="centerY" secondItem="Ycv-4Q-k0p" secondAttribute="centerY" id="k11-R6-iP4"/>
+                                                    <constraint firstAttribute="trailingMargin" secondItem="JSP-cb-uTX" secondAttribute="trailing" constant="40" id="o2E-jw-LjE"/>
+                                                </constraints>
                                             </tableViewCellContentView>
+                                            <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            <connections>
+                                                <outlet property="userAvatar" destination="DE5-OA-NzB" id="zvA-HX-FrC"/>
+                                                <outlet property="userCourse" destination="JSP-cb-uTX" id="aLE-1Q-qyx"/>
+                                                <outlet property="userName" destination="JRj-aN-dOy" id="5HK-RW-a1U"/>
+                                            </connections>
                                         </tableViewCell>
                                     </prototypes>
                                 </tableView>
@@ -130,6 +170,7 @@
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
+                        <outlet property="tableView" destination="uN5-DE-HDb" id="BWr-kh-w9v"/>
                         <outlet property="userAvatar" destination="RUN-2E-qHo" id="FwA-Ot-fv7"/>
                         <outlet property="userCourse" destination="fdQ-cH-aFr" id="NZQ-rD-1Qx"/>
                         <outlet property="userName" destination="ctx-rY-VTr" id="9W3-tW-Fav"/>
@@ -711,8 +752,9 @@
                                                     <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addFriendBtn" translatesAutoresizingMaskIntoConstraints="NO" id="X1a-eO-GUo">
+                                                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addFriendBtn" translatesAutoresizingMaskIntoConstraints="NO" id="X1a-eO-GUo">
                                                     <rect key="frame" x="292" y="27.5" width="15" height="15"/>
+                                                    <gestureRecognizers/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="15" id="4DD-rz-hwk"/>
                                                         <constraint firstAttribute="width" constant="15" id="86y-DF-ld6"/>
@@ -744,6 +786,7 @@
                                         </tableViewCellContentView>
                                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <connections>
+                                            <outlet property="addBtn" destination="X1a-eO-GUo" id="ROj-9T-ETb"/>
                                             <outlet property="course" destination="0W2-cy-POK" id="7SI-KS-jmG"/>
                                             <outlet property="name" destination="AMj-SA-lUy" id="Fih-oa-psK"/>
                                             <outlet property="userAvatar" destination="kGn-k7-pRG" id="T2m-Vv-Hdm"/>
@@ -996,6 +1039,6 @@
         <image name="profile" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="zLU-F4-yun"/>
+        <segue reference="4Fd-si-jBT"/>
     </inferredMetricsTieBreakers>
 </document>
